package W02.task3;

public interface Sorter {

    public void load(int[] elements);
    public void sort();
    public String getPlan();

}